--- a/ui/alkatechcrm/package.json
+++ b/ui/alkatechcrm/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.3",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
