--- a/ui/alkatechcrm/package.json
+++ b/ui/alkatechcrm/package.json
@@ -14,7 +14,8 @@
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.3",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-select": "^3.11.2"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
